--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "framer-motion": "^11.1.7",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-full-screen": "^1.1.1",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
     "zustand": "^4.5.2"
