--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-full-screen": "^1.1.1",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
+    "react-spinners": "^0.13.8",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
